# chat-app

./: README.md  pyproject.toml  requirements.txt
src/: manage.py
src/app/: admin.py  consumers.py  routing.py  service.py  urls.py
src/app/domain/: conversation.py
src/app/management/commands/: add_to_customer_service.py
src/app/migrations/: 0001_initial.py  0002_conversation_active.py  0003_alter_conversation_active.py  0004_rename_active_conversation_new.py  0005_alter_conversation_new.py  0006_rename_customer_service_user_conversation_employee.py
src/app/models/: __init__.py  conversation.py  message.py  room.py
src/app/templates/app/: chat.html  connect.html  conversation.html  conversation_detail.html  create.html  customer_service.html  join.html  room.html
src/app/views/: chat.py
src/authentication/: urls.py
src/authentication/migrations/: 0001_initial.py  0002_auto_20240707_1244.py
src/authentication/models/: __init__.py
src/authentication/views/: home.py
src/chat/: asgi.py  settings.py  urls.py  wsgi.py
src/theme/templates/theme/: 400.html  base.html
src/theme/templates/theme/account/: login.html  signup.html
src/theme/templates/theme/partials/: navbar.html
